# pinecone-rag-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: config.py  main.py
app/routers/: chat.py  documents.py  documents_r2.py  search.py
app/schemas/: chat.py  document.py  search.py
app/services/: document_service.py  embedding_service.py  llm_service.py  pinecone_service.py  storage_service.py
