[project]
name = "ask-your-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.11",
    "openai>=2.9.0",
    "pinecone>=8.0.0",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "uvicorn==0.34.0",
]
